# matrix

./: .gitignore  README.md
include/: Enums.h  Matrix.h  MatrixException.h
src/: CMakeLists.txt  Matrix.cpp  MatrixException.cpp  main.cpp
